helm-templeates/agin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one
spec:
  selector:
    app: aks-helloworld-one
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
