helm-templeates/agin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    # appgw.ingress.kubernetes.io/ssl-redirect: "true"
    # appgw.ingress.kubernetes.io/use-private-ip: "true"
spec:
  # tls:
  #   - secretName: nginx-cert
  #     hosts:
  #       - ingresskobidemo.westeurope.cloudapp.azure.com
  rules:
  - host: ingresskobidemo.westeurope.cloudapp.azure.com
    http:
      paths:
      # - path: /hello-world-one
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one-svc
            port:
              number: 80
