helm-templeates/app-fix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-one  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-one
  template:
    metadata:
      labels:
        app: aks-helloworld-one
    spec:
      containers:
      - name: aks-helloworld-one
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: aks-helloworld-one
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-helloworld-one-ingress
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/use-private-ip: "false"
spec:
  rules:
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
---
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: web-allow-external
# spec:
#   podSelector:
#     matchLabels:
#       role: frontend
#   ingress:
#   - ports:
#     - port: 80
#     from: []
# ---
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: aks-helloworld-one-policy
# spec:
#   podSelector:
#     matchLabels:
#       app: aks-helloworld-one
#       role: backend
#   ingress:
#     - from:
#       - podSelector:
#           matchLabels:
#             app: aks-helloworld-one
