helm-templeates/app-helloworld-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: aks-helloworld-one-svc
      port:
        number: 80
  rules:
  - host: ingresskobidemo.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: aks-helloworld-one-svc
            port:
              number: 80
        path: /
        pathType: Prefix
